another map bug squashed

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -45,7 +45,7 @@ body {
     display: block;
 }
 
-img {
+img.memory_image {
     position:relative;
     max-width: 90%;
     height: auto;
